--- a/voorbeeld/index.html
+++ b/voorbeeld/index.html
@@ -23,37 +23,41 @@
         <h2>Dedicated to the Craft of Building Websites</h2>
         <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest
             technologies. Join us this August!</p>
-        <a>Register Now</a>
+        <p>Register Now</p>
     </section>
 
     <!-- Speakers -->
     <main>
         <section>
             <h3>World-Class Speakers</h3>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus modi, itaque praesentium quaerat
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus modi, itaque praesentium quaerat
             recusandae delectus ipsum nesciunt, quo unde veniam quis harum sapiente. Deserunt iste aliquam sint iusto
-            veritatis distinctio.
+            veritatis distinctio.</p>
         </section>
 
         <section>
             <h3>Three Inspiring Days</h3>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus modi, itaque praesentium quaerat
-            recusandae delectus ipsum nesciunt, quo unde veniam quis harum sapiente. Deserunt iste aliquam sint iusto
-            veritatis distinctio.
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus modi, itaque praesentium quaerat
+                recusandae delectus ipsum nesciunt, quo unde veniam quis harum sapiente. Deserunt iste aliquam sint iusto
+                veritatis distinctio.
+            </p>
         </section>
 
         <section>
             <h3>The Chicago Theatre</h3>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus modi, itaque praesentium quaerat
-            recusandae delectus ipsum nesciunt, quo unde veniam quis harum sapiente. Deserunt iste aliquam sint iusto
-            veritatis distinctio.
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus modi, itaque praesentium quaerat
+                recusandae delectus ipsum nesciunt, quo unde veniam quis harum sapiente. Deserunt iste aliquam sint iusto
+                veritatis distinctio.
+            </p>
         </section>
     </main>
 
 
     <!-- Footer -->
     <footer>
-        Styles Conference
+        <p>Styles Conference</p>
         <nav>t f s l i m</nav>
     </footer>
 
